force-app/main/default/objects/battle_station__c/battle_station__c.object-meta.xml
<CustomObject>
    <label>battle station</label>
    <nameField>
        <label>battle station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>battle stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>