force-app/main/default/objects/battle_station__c/fields/crew_members__c.field-meta.xml
<CustomField>
    <fullName>crew_members__c</fullName>
    <label>crew members</label>
    <summarizedField>resource__c.quantity__c</summarizedField>
    <summaryForeignKey>resource__c.battle_station__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>