force-app/main/default/objects/battle_station__c/fields/weapons_status__c.field-meta.xml
<CustomField>
    <fullName>weapons_status__c</fullName>
    <label>weapons status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Operational</fullName>
                <default>true</default>
                <label>Not Yet Operational</label>
            </value>
            <value>
                <fullName>Fully Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>